--- a/index.html
+++ b/index.html
@@ -177,26 +177,27 @@
     <nav>
         <a href="#about">О нас</a>
         <a href="#services">Услуги</a>
-        <a href="#projects">Проекты</a>
         <a href="#contacts">Контакты</a>
     </nav>
     <main>
         <section id="about">
             <h2>О нас</h2>
             <p>
-                Производство кованых и литых заготовок.
+                ООО «Техсталь» обеспечивает предприятия России кованными и литыми заготовками из различных марок стали. По требованию заказчика поставка продукции осуществляется с механической обработкой и ультразвуковым контролем, поставка заготовок для АЭС с приемкой уполномоченной организации.<br>
+                Мы предлагаем поковки различной конфигурации и размеров, в т.ч. крупногабаритные, изготовленные в соответствии с требованиями установленных ГОСТ и ОСТ (ГОСТ 8479-70, ГОСТ 25054-81, ОСТ 108.030.113-87, ОСТ 108.109.01-92 и т.д.), а также по ТУ заказчика:<br>
+                1. Валы гладкие круглого и прямоугольного сечения;<br>
+                2. Валы круглого сечения с уступами;<br>
+                3. Кольца раскатные;<br>
+                4. Цилиндры с отверстиями;<br>
+                5. Плиты и штамповые кубики;<br>
+                6. Диски с отверстиями и без отверстий;<br>
+                7. Производство деталей (фланцы, матрицы, пуансоны, штампы, днища, обечайки и т.д.), по чертежам заказчика.
             </p>
         </section>
         <section id="services">
             <h2>Услуги</h2>
             <p>
                 Мы предлагаем широкий спектр услуг по обработке и производству металла.
-            </p>
-        </section>
-        <section id="projects">
-            <h2>Проекты</h2>
-            <p>
-                Наши успешные проекты показывают нашу экспертность в сфере металлообработки.
             </p>
         </section>
         <section id="contacts">
@@ -222,8 +223,6 @@
         <input type="tel" id="phone" placeholder="Телефон" required>
         <textarea id="comments" placeholder="Комментарий"></textarea>
         <input type="file" id="file">
-        <button onclick="sendMessage()">Отправить</button>
-        <button onclick="closeMessageModal()">Отмена</button>
     </div>
 </body>
 </html>
