--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="home">
             <h2>Главная</h2>
             <p>ООО «Техсталь» обеспечивает предприятия России кованными и литыми заготовками из различных марок стали. По требованию заказчика поставка продукции осуществляется с механической обработкой и ультразвуковым контролем, поставка заготовок для АЭС с приемкой уполномоченной организации.</p>
-            <p>Мы предлагаем поковки различной конфигурации и размеров, в т.ч. крупногабаритные, изготовленные в соответствии с требованиями установленных ГОСТ и ОСТ (ГОСТ 8479-70, ГОСТ 25054-81, ОСТ 108.030.113-87, ОСТ 108.109.01-92 и т.д.), а также по ТУ заказчика:</p>
+            <p>Поковки различной конфигурации и размеров, в т.ч. крупногабаритные, изготовленные в соответствии с требованиями установленных ГОСТ и ОСТ (ГОСТ 8479-70, ГОСТ 25054-81, ОСТ 108.030.113-87, ОСТ 108.109.01-92 и т.д.), а также по ТУ заказчика:</p>
             <ul>
                 <li>Валы гладкие круглого и прямоугольного сечения;</li>
                 <li>Валы круглого сечения с уступами;</li>
